--- a/.env
+++ b/.env
@@ -1,10 +1,1 @@
-DB_HOST=dpg-d1iqjch5pdvs73e6b62g-a.oregon-postgres.render.com
-DB_USER=moscu_db_user
-DB_PASSWORD=SvMDllTeGEpBM8JH6MDEf36NT23r6B3C
-DB_NAME=moscu_db
-DB_PORT=5432
-
-FIREBASE_PROJECT_ID=
-FIREBASE_PRIVATE_KEY=
-FIREBASE_CLIENT_EMAIL=
-FIREBASE_BUCKET=
+DATABASE_URL=postgres://moscu_db_user:SvMDllTeGEpBM8JH6MDEf36NT23r6B3C@dpg-d1iqjch5pdvs73e6b62g-a.oregon-postgres.render.com:5432/moscu_db
